[package]
name = "rl-wasm"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.108"
boxcars = "0.10.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
js-sys = "0.3.85"
wasm-bindgen-test = "0.3.58"
